# LoyaltyBlackbird

./: .env  .gitignore  .replit  app.py  extensions.py  models.py  pyproject.toml  replit.md  seed.py  utils.py
attached_assets/: Pasted-I-want-to-build-a-full-stack-loyalty-program-web-app-inspired-by-the-Blackbird-payment-loyalty-syste-1757179709501_1757179709502.txt
auth/: forms.py  routes.py
dashboard/: __init__.py  routes.py
instance/: loyalty.db
map/: __init__.py  routes.py
migrations/: 1757283916_init.py
static/: app.js  manifest.json  qr-scanner.js  style.css  sw.js
templates/: 404.html  base.html  index.html
templates/auth/: login.html  register.html
templates/dashboard/: customer.html  merchant.html  profile.html  voucher_history.html
templates/map/: map.html
templates/partials/: transaction_row.html
templates/transactions/: issue.html  redeem.html  transfer.html
transactions/: __init__.py  forms.py  routes.py
