[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "qrcode>=8.2",
    "pillow>=11.3.0",
    "sqlalchemy>=2.0.43",
    "twilio>=9.8.0",
    "flask-babel>=4.0.0",
    "flask-sqlalchemy-lite>=0.1.0",
    "flask-alembic>=3.1.1",
    "python-dotenv>=1.1.1",
    "flask-wtf>=1.2.1",
]
